// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Should render Table empty 1`] = `
<table
  class="AbcTable"
/>
`;

exports[`Should render Table full house 1`] = `
<table
  class="AbcTable AbcTable_sticky AbcTable_highlight AbcTable_border test-table-class"
>
  <caption
    class="AbcTable-Caption"
  >
    Test table
  </caption>
  <thead
    class="AbcTable-THead test-head-class"
  >
    <tr
      class="AbcTable-Tr"
    >
      <th
        class="AbcTable-Th"
        colspan="2"
      >
        header
      </th>
    </tr>
  </thead>
  <tbody
    class="AbcTable-TBody test-body-class"
  >
    <tr
      class="AbcTable-Tr test-tr-class"
    >
      <td
        class="AbcTable-Td test-td-class"
        rowspan="2"
      >
        this cell in two rows
      </td>
      <td
        class="AbcTable-Td"
      >
        cell 1
      </td>
    </tr>
    <tr
      class="AbcTable-Tr"
    >
      <td
        class="AbcTable-Td"
      >
        cell 2
      </td>
    </tr>
  </tbody>
  <tfoot
    class="AbcTable-TFoot"
  >
    <tr
      class="AbcTable-Tr"
    >
      <td
        class="AbcTable-Td"
        colspan="2"
      >
        cell 3
      </td>
    </tr>
  </tfoot>
</table>
`;

exports[`Should render Table with className 1`] = `
<table
  class="AbcTable table-class"
/>
`;
